tests/snapshots/e2e__safe_reset_mixed.snap
---
source: tests/e2e.rs
expression: redact_hashes(&text)
---
Reset completed (mixed).
- Previous HEAD: <HASH>
- New HEAD: <HASH>
- Target: HEAD~1
To undo: git reset --soft <HASH>
