tests/snapshots/e2e__session_start.snap
---
source: tests/e2e.rs
expression: "normalize_output(&redact_session_id(&text), repo.path_str())"
---
Session started.
- Session ID: <SESSION_ID>
- Repo root: <REPO>
