tests/snapshots/e2e__status_clean_repo.snap
---
source: tests/e2e.rs
expression: "normalize_output(&text, repo.path_str())"
---
Branch: master
Clean: true
